--- a/app_server/views/v_merchant/list.jade
+++ b/app_server/views/v_merchant/list.jade
@@ -7,3 +7,4 @@ each merchant in merchants
     h4
     a(href="/merchant/#{merchant._id}")= merchant.name
     p= "(" + merchant.category + ")"
+    a(href="/merchant/#{merchant._id}/product/new") Add Product
